Add collision detection for apples. Add update score function.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
 
 <header id="header">Snake Game</header>
 
+<div id="score-box">
+    <h3 id="score"></h3>
+</div>
+
 <body>
 
-    <canvas id="gameCanvas" width='800' height="600"></canvas>
+    <canvas id="gameCanvas" width='500' height="500"></canvas>
 
     <script src="scripts.js"></script>
 </body>
