--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <header id="header">Snake Game</header>
 
 <div id="score-box">
-    <h3 id="score"></h3>
+    <h1>SCORE</h1>
+    <h3 id="score">0</h3>
 </div>
 
 <body>
