Final styling added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!doctype html>
-
 <html lang="en">
 
 <head>
@@ -8,6 +7,7 @@
     <title>Snake Game</title>
 
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
 </head>
 
@@ -19,9 +19,7 @@
 </div>
 
 <body>
-
     <canvas id="gameCanvas" width='600' height="600"></canvas>
-
     <script src="scripts.js"></script>
 </body>
 
